--- a/swootch/Base.lproj/Main.storyboard
+++ b/swootch/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <segue destination="gfk-m7-k37" kind="show" id="bMc-vQ-Yog"/>
+                                    <segue destination="gfk-m7-k37" kind="show" id="ech-1m-kF0"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -103,10 +103,10 @@
             </objects>
             <point key="canvasLocation" x="127.53623188405798" y="127.90178571428571"/>
         </scene>
-        <!--View Controller-->
+        <!--LeagueVC-->
         <scene sceneID="53I-Hg-cdt">
             <objects>
-                <viewController id="gfk-m7-k37" sceneMemberID="viewController">
+                <viewController id="gfk-m7-k37" customClass="LeagueVC" customModule="swootch" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8vk-xf-Axq">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -114,14 +114,6 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="desiredLeagueBG" translatesAutoresizingMaskIntoConstraints="NO" id="0dp-IO-Ob3">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NZ5-77-T3R">
-                                <rect key="frame" x="19" y="13" width="29" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="backButton"/>
-                                <connections>
-                                    <segue destination="h1y-vC-fYW" kind="unwind" unwindAction="popWithSegue:" id="1pm-B5-idW"/>
-                                </connections>
-                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="INH-Nq-nof">
                                 <rect key="frame" x="17" y="181" width="380" height="202"/>
                                 <subviews>
@@ -132,6 +124,9 @@
                                         </constraints>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Mens"/>
+                                        <connections>
+                                            <action selector="onMensBtnClicked:" destination="gfk-m7-k37" eventType="touchUpInside" id="tgk-hk-tL8"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Bb-mE-hhw" customClass="BorderedButton" customModule="swootch" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="76" width="380" height="50"/>
@@ -140,6 +135,9 @@
                                         </constraints>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Womens"/>
+                                        <connections>
+                                            <action selector="onWomensBtnClicked:" destination="gfk-m7-k37" eventType="touchUpInside" id="A3F-pM-gbG"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OEc-gU-Tra" customClass="BorderedButton" customModule="swootch" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="152" width="380" height="50"/>
@@ -148,6 +146,9 @@
                                         </constraints>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Co-End"/>
+                                        <connections>
+                                            <action selector="onCoEndClicked:" destination="gfk-m7-k37" eventType="touchUpInside" id="37H-sO-qUr"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -155,40 +156,48 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dmz-W0-coy" customClass="BorderedButton" customModule="swootch" customModuleProvider="target">
-                                <rect key="frame" x="20" y="772" width="374" height="50"/>
+                                <rect key="frame" x="17" y="739" width="374" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="9Ao-Kj-s8g"/>
+                                    <constraint firstAttribute="height" constant="50" id="Jpd-6w-6Eq"/>
                                 </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Next"/>
                                 <connections>
-                                    <segue destination="g2V-8A-OHi" kind="show" id="2Ea-h6-TFk"/>
+                                    <action selector="onNextBtnClicked:" destination="gfk-m7-k37" eventType="touchUpInside" id="xET-Yr-0Fg"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Hvv-Vw-DhG">
-                                <rect key="frame" x="149" y="10" width="118.99999999999997" height="72"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Hvv-Vw-DhG">
+                                <rect key="frame" x="147.66666666666666" y="10" width="118.99999999999997" height="20"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NZ5-77-T3R">
+                                <rect key="frame" x="19" y="13" width="29" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="h1y-vC-fYW" kind="unwind" unwindAction="popWithSegue:" id="1pm-B5-idW"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="Hvv-Vw-DhG" firstAttribute="centerX" secondItem="8vk-xf-Axq" secondAttribute="centerX" id="1QG-a4-VN5"/>
+                            <constraint firstItem="dmz-W0-coy" firstAttribute="leading" secondItem="INH-Nq-nof" secondAttribute="leading" id="2pF-EG-hoJ"/>
                             <constraint firstItem="0dp-IO-Ob3" firstAttribute="leading" secondItem="0hE-7O-egt" secondAttribute="leading" id="4dJ-xM-5kx"/>
-                            <constraint firstAttribute="bottom" secondItem="dmz-W0-coy" secondAttribute="bottom" constant="20" id="68Z-Ki-shm"/>
+                            <constraint firstItem="0hE-7O-egt" firstAttribute="bottom" secondItem="dmz-W0-coy" secondAttribute="bottom" constant="19" id="5CF-3I-DxX"/>
                             <constraint firstItem="Hvv-Vw-DhG" firstAttribute="top" secondItem="0hE-7O-egt" secondAttribute="top" constant="10" id="6VD-Fj-s1P"/>
                             <constraint firstItem="0dp-IO-Ob3" firstAttribute="top" secondItem="8vk-xf-Axq" secondAttribute="top" id="80d-0Q-k3h"/>
                             <constraint firstItem="0dp-IO-Ob3" firstAttribute="leading" secondItem="0hE-7O-egt" secondAttribute="leading" id="Azf-ym-y85"/>
                             <constraint firstItem="0dp-IO-Ob3" firstAttribute="trailing" secondItem="0hE-7O-egt" secondAttribute="trailing" id="F6d-pQ-wPw"/>
                             <constraint firstItem="0hE-7O-egt" firstAttribute="trailing" secondItem="INH-Nq-nof" secondAttribute="trailing" constant="17" id="G68-H6-p3v"/>
                             <constraint firstItem="0dp-IO-Ob3" firstAttribute="trailing" secondItem="0hE-7O-egt" secondAttribute="trailing" id="Ldv-iP-MRx"/>
-                            <constraint firstItem="dmz-W0-coy" firstAttribute="leading" secondItem="8vk-xf-Axq" secondAttribute="leadingMargin" id="TsR-M2-gEv"/>
                             <constraint firstAttribute="bottom" secondItem="0dp-IO-Ob3" secondAttribute="bottom" id="VlK-eq-Z4q"/>
                             <constraint firstItem="INH-Nq-nof" firstAttribute="top" secondItem="0hE-7O-egt" secondAttribute="top" constant="181" id="ZUa-s0-CMg"/>
                             <constraint firstItem="0dp-IO-Ob3" firstAttribute="top" secondItem="0hE-7O-egt" secondAttribute="top" id="ZqS-Gg-Jkp"/>
                             <constraint firstItem="0hE-7O-egt" firstAttribute="trailing" secondItem="0dp-IO-Ob3" secondAttribute="trailing" id="eSa-Gi-n7n"/>
-                            <constraint firstItem="dmz-W0-coy" firstAttribute="centerX" secondItem="INH-Nq-nof" secondAttribute="centerX" id="ewN-Zd-aZq"/>
                             <constraint firstItem="0dp-IO-Ob3" firstAttribute="leading" secondItem="0hE-7O-egt" secondAttribute="leading" id="jrS-Q0-S2V"/>
                             <constraint firstItem="0dp-IO-Ob3" firstAttribute="top" secondItem="0hE-7O-egt" secondAttribute="top" id="kJw-Ie-cpY"/>
                             <constraint firstItem="INH-Nq-nof" firstAttribute="leading" secondItem="0hE-7O-egt" secondAttribute="leading" constant="17" id="niQ-rU-MkB"/>
+                            <constraint firstItem="0hE-7O-egt" firstAttribute="trailing" secondItem="dmz-W0-coy" secondAttribute="trailing" constant="23" id="o2z-Iy-xu1"/>
                             <constraint firstItem="INH-Nq-nof" firstAttribute="top" secondItem="Hvv-Vw-DhG" secondAttribute="bottom" constant="99" id="w5Z-cH-5BO"/>
                             <constraint firstItem="INH-Nq-nof" firstAttribute="centerX" secondItem="8vk-xf-Axq" secondAttribute="centerX" id="yIo-pH-TBy"/>
                         </constraints>
@@ -200,21 +209,26 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" id="26t-hY-hYt"/>
+                    <connections>
+                        <outlet property="nextBtn" destination="dmz-W0-coy" id="bkV-tQ-ReX"/>
+                        <segue destination="g2V-8A-OHi" kind="show" identifier="SkillsSegue" id="ojQ-xP-uVq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dez-3q-qO0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="h1y-vC-fYW" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="837.68115942028987" y="127.90178571428571"/>
+            <point key="canvasLocation" x="852" y="139"/>
         </scene>
-        <!--View Controller-->
+        <!--SkillVC View Controller-->
         <scene sceneID="lHT-BS-sXy">
             <objects>
-                <viewController id="g2V-8A-OHi" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="33d-De-dWy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController id="g2V-8A-OHi" customClass="SkillVCViewController" customModule="swootch" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="khO-fN-3xR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="beginnerBallerBG" translatesAutoresizingMaskIntoConstraints="NO" id="KhV-97-on2">
+                            <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="beginnerBallerBG" translatesAutoresizingMaskIntoConstraints="NO" id="KhV-97-on2">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="xav-XB-IKs">
@@ -252,9 +266,23 @@
                                     <constraint firstAttribute="width" constant="119" id="GOu-QU-BoE"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I am a:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VkN-pS-rQg">
+                                <rect key="frame" x="165.33333333333334" y="150" width="83.666666666666657" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P3a-qP-Tvx">
+                                <rect key="frame" x="20" y="205" width="374" height="92"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="77"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="VkN-pS-rQg" firstAttribute="top" secondItem="8Fl-jc-Qw2" secondAttribute="bottom" constant="98" id="5At-xh-R5t"/>
                             <constraint firstAttribute="trailing" secondItem="KhV-97-on2" secondAttribute="trailing" id="7LB-Cb-7Qu"/>
                             <constraint firstItem="o9l-vM-rpO" firstAttribute="bottom" secondItem="8Fl-jc-Qw2" secondAttribute="bottom" constant="756" id="8L0-cb-5kT"/>
                             <constraint firstAttribute="bottom" secondItem="KhV-97-on2" secondAttribute="bottom" id="BCT-re-HEb"/>
@@ -262,6 +290,7 @@
                             <constraint firstItem="xav-XB-IKs" firstAttribute="centerX" secondItem="khO-fN-3xR" secondAttribute="centerX" id="aX0-dZ-nhP"/>
                             <constraint firstItem="o9l-vM-rpO" firstAttribute="bottom" secondItem="xav-XB-IKs" secondAttribute="bottom" constant="344" id="cI0-ng-rC9"/>
                             <constraint firstItem="xav-XB-IKs" firstAttribute="leading" secondItem="o9l-vM-rpO" secondAttribute="leading" constant="10" id="coN-cb-kU7"/>
+                            <constraint firstItem="VkN-pS-rQg" firstAttribute="centerX" secondItem="khO-fN-3xR" secondAttribute="centerX" id="eDN-d4-Q60"/>
                             <constraint firstItem="KhV-97-on2" firstAttribute="top" secondItem="o9l-vM-rpO" secondAttribute="top" id="eTw-nS-zaa"/>
                             <constraint firstItem="8Fl-jc-Qw2" firstAttribute="centerX" secondItem="khO-fN-3xR" secondAttribute="centerX" id="gss-Rw-PVL"/>
                             <constraint firstItem="KhV-97-on2" firstAttribute="leading" secondItem="khO-fN-3xR" secondAttribute="leading" id="h9m-l8-2ls"/>
@@ -275,8 +304,10 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" id="uLp-MU-TqI"/>
+                    <connections>
+                        <outlet property="player" destination="P3a-qP-Tvx" id="rR5-W9-84n"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="33d-De-dWy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1584.057971014493" y="127.90178571428571"/>
         </scene>
